fixed desc alignment and list style non

--- a/src/comingup.css
+++ b/src/comingup.css
@@ -30,7 +30,8 @@
 }
 
 .desc {
-  width: 100%;
+  width: 80%;
+  justify-content: center;
   font-size: 24px;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
