--- a/src/hamburger.css
+++ b/src/hamburger.css
@@ -55,6 +55,7 @@
   z-index: 1000;
   background-color: #fff;
   margin: 0 -144px;
+  list-style-type: none
 }
 
 .li{
